 * Fix: Form submissions pagination no longer looses date filter when changing page (Bertrand Bordage)
 * Fix: PostgreSQL search backend now removes duplicate page instances from the database (Bertrand Bordage)
 * Fix: `FormSubmissionsPanel` now recognises custom form submission classes (LB (Ben Johnston))


1.13.1 (17.11.2017)
~~~~~~~~~~~~~~~~~~~

 * Fix: API listing views no longer fail when no site records are defined (Karl Hobley)
 * Fix: Fixed crash in XML sitemap generator when all pages on the site are private (Stein Strindhaug)
 * Fix: Fixed incorrect z-index on userbar causing it to appear behind page content (Stein Strindhaug)
 * Fix: Fixed error in Postgres search backend when searching specific fields of a specific() Page queryset (Bertrand Bordage, Matt Westcott)
 * Fix: Fixed error on Elasticsearch backend when passing a queryset as an `__in` filter (Karl Hobley, Matt Westcott)
 * Fix: `__isnull` filters no longer fail on Elasticsearch 5 (Karl Hobley)
 * Fix: Prevented intermittent failures on Postgres search backend when a field is defined as both a `SearchField` and a `FilterField` (Matt Westcott)


1.13 (16.10.2017)
~~~~~~~~~~~~~~~~~

 * Front-end cache invalidator now supports purging URLs as a batch (Karl Hobley)
 * Custom document model is now documented (Emily Horsman)
 * Use minified versions of CSS in the admin by adding minification to the front-end tooling (Vincent Audebert, Thibaud Colas)
 * Wagtailforms serve view now passes `request.FILES`, for use in custom form handlers (LB (Ben Johnston))
 * Documents and images are now given new filenames on re-uploading, to avoid old versions being kept in cache (Bertrand Bordage)
 * Added custom 404 page for admin interface (Jack Paine)
 * Breadcrumb navigation now uses globe icon to indicate tree root, rather than home icon (Matt Westcott)
 * Updated React to 15.6.2 due to relicensing (Janneke Janssen)
 * User search in the Wagtail admin UI now works across multiple fields (Will Giddens)